[front-end] style:Fixed overflow issue

--- a/client/web/src/components/sidebar/sidebar.css
+++ b/client/web/src/components/sidebar/sidebar.css
@@ -4,6 +4,7 @@
     height: calc(100vh - 138px);
     overflow-y: auto;
     flex: 1;
+    max-width: 500px;
 }
 
 .sidebar-items {
